# stock_analysis_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-16-base-agent.md  2026-06-21-deepsearch-agent.md  2026-06-22-market-data-tool.md
docs/superpowers/specs/: 2026-06-16-base-agent-design.md  2026-06-21-deepsearch-agent-design.md  2026-06-22-market-data-tool-design.md
src/stock_analysis_agent/: __init__.py  __main__.py  cli.py  config.py  errors.py  llm.py  logging.py  models.py
src/stock_analysis_agent/agent/: __init__.py  analysis_schema.py  base.py  deepsearch.py  exceptions.py  middleware.py  stock_analysis.py
src/stock_analysis_agent/agents/: __init__.py  base.py  deepsearch.py  exceptions.py  prompts.py  stock_agent.py
src/stock_analysis_agent/data_sources/: __init__.py  a_stock.py  base.py  hk_stock.py  us_stock.py
src/stock_analysis_agent/memory/: __init__.py  file_cache.py
src/stock_analysis_agent/prompts/: system_prompt.md
src/stock_analysis_agent/script/: __init__.py  analyze_stock.py  test_mengniu_snapshot.py  test_sina_mengniu.py
src/stock_analysis_agent/skill/announcement-search/__MACOSX/announcement-search/: ._SKILL.md
src/stock_analysis_agent/skill/mx-finance-data/miaoxiang/mx_finance_data/: mx_finance_data_21e245ab.md  mx_finance_data_21e245ab.xlsx  mx_finance_data_45765da1.md  (+9 more)
src/stock_analysis_agent/skill/mx-finance-data/scripts/: get_data.py
src/stock_analysis_agent/skill/mx-stocks-screener/scripts/: get_data.py
src/stock_analysis_agent/skill/stock-analysis/: SKILL.md
src/stock_analysis_agent/skill/stock-snapshot-format/: SKILL.md
src/stock_analysis_agent/tools/: __init__.py  feishu_cli.py  market_data.py  skill.py  stock_tools.py  text_extractor.py  web_search.py
tests/: __init__.py  test_package_exports.py
tests/agent/: __init__.py  test_analysis_schema.py  test_base.py  test_deepsearch.py  test_exceptions.py  test_middleware.py  test_stock_analysis.py
tests/agents/: __init__.py  conftest.py  test_base.py  test_deepsearch.py  test_exceptions.py  test_middleware.py
tests/memory/: __init__.py  test_file_cache.py
tests/script/: __init__.py  test_analyze_stock.py
tests/skill/: __init__.py  test_stock_snapshot_format.py
tests/tools/: __init__.py  test_feishu_cli.py  test_market_data.py  test_skill.py  test_text_extractor.py  test_web_search.py
(+8 files in other folders)
