[project]
name = "stock-analysis-agent"
version = "0.1.0"
description = "Multi-market (A股 / 美股 / 港股) stock analysis agent on LangChain + Claude"
authors = [
    { name = "huangwr", email = "18367716731@183.com" }
]
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "langchain>=1.3.6",
    "langchain-anthropic>=1.4.4",
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "yfinance>=1.4.1",
]

[project.scripts]
stock-analysis-agent = "stock_analysis_agent.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
