[project]
name = "stock_analysis_agent"
version = "0.1.0"
description = "Reusable agents for stock analysis"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-core>=1.0",
    "httpx>=0.25,<0.27",
    "tushare>=1.4",
    "akshare>=1.13",
    "mootdx>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analysis_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.basedpyright]
# Tell basedpyright to use the project venv for import resolution.
# The .vscode/settings.json python-envs.* keys are auto-managed by the
# Python extension and reset to system Python on every reload, so they
# can't be relied on. venvPath/venv here is read directly by basedpyright
# (and pyright) and survives reloads / IDE env auto-detection.
venvPath = "."
venv = ".venv"
